--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/Users/Khaled Ahmed/.vscode/extensions/redhat.java-1.37.0-win32-x64/jre/17.0.13-win32-x86_64
+java.home=C\:/Program Files/Java/jdk-22
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
